--- a/src/client/js/Widgets/BlockEditor/styles/BlockEditorWidget.DecoratorBase.ConnectionArea.css
+++ b/src/client/js/Widgets/BlockEditor/styles/BlockEditorWidget.DecoratorBase.ConnectionArea.css
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2013 Vanderbilt University, All rights reserved.
  * 
- * Author: Robert Kereskenyi
+ * Author: Brian Broll
  */
 .linkable-item .conn-area {
   position: absolute;
