--- a/src/client/js/Widgets/BlockEditor/styles/BlockEditorWidget.scss
+++ b/src/client/js/Widgets/BlockEditor/styles/BlockEditorWidget.scss
@@ -1,10 +1,10 @@
-$snap-editor-selection-outline-background-color: rgba(255, 255, 0, 0.05);
-$snap-editor-selection-outline-border: rgba(0,0,0,0.5) dashed 1px;
-$snap-editor-selection-outline-shadow-start: rgba(0, 0, 0, 0.075);
-$snap-editor-selection-outline-shadow-end: rgba(0, 0, 0, 0.3);
-$snap-editor-selection-outline-s-btn-background-color: #FFFFFF;
-$snap-editor-selection-outline-s-btn-shadow-start: rgba(0, 0, 0, 0.075);
-$snap-editor-selection-outline-s-btn-shadow-end: rgba(0, 0, 0, 0.3);
+$block-editor-selection-outline-background-color: rgba(255, 255, 0, 0.05);
+$block-editor-selection-outline-border: rgba(0,0,0,0.5) dashed 1px;
+$block-editor-selection-outline-shadow-start: rgba(0, 0, 0, 0.075);
+$block-editor-selection-outline-shadow-end: rgba(0, 0, 0, 0.3);
+$block-editor-selection-outline-s-btn-background-color: #FFFFFF;
+$block-editor-selection-outline-s-btn-shadow-start: rgba(0, 0, 0, 0.075);
+$block-editor-selection-outline-s-btn-shadow-end: rgba(0, 0, 0, 0.3);
 
 /*error decorator properties*/
 $error-decorator-background-color: #F2DEDE;
@@ -22,7 +22,7 @@ $segment-point-move-path-color: #FF7800;
 $segment-point-bezier-control-marker-background-color: #FFFFFF;
 $segment-point-bezier-control-marker-border-color: #000000;
 
-.snap-editor {
+.block-editor {
   outline: none;
 
   .items {
@@ -33,27 +33,27 @@ $segment-point-bezier-control-marker-border-color: #000000;
     }
 
     .selection-outline {
-      background: $snap-editor-selection-outline-background-color;
-      border: $snap-editor-selection-outline-border;
+      background: $block-editor-selection-outline-background-color;
+      border: $block-editor-selection-outline-border;
       position: absolute;
       pointer-events: none;
       z-index: 100;
-      -webkit-box-shadow: inset 0 1px 1px $snap-editor-selection-outline-shadow-start 0 0 4px $snap-editor-selection-outline-shadow-end;
-      -moz-box-shadow: inset 0 1px 1px $snap-editor-selection-outline-shadow-start, 0 0 4px $snap-editor-selection-outline-shadow-end;
-      box-shadow: inset 0 1px 1px $snap-editor-selection-outline-shadow-start, 0 0 4px $snap-editor-selection-outline-shadow-end;
+      -webkit-box-shadow: inset 0 1px 1px $block-editor-selection-outline-shadow-start 0 0 4px $block-editor-selection-outline-shadow-end;
+      -moz-box-shadow: inset 0 1px 1px $block-editor-selection-outline-shadow-start, 0 0 4px $block-editor-selection-outline-shadow-end;
+      box-shadow: inset 0 1px 1px $block-editor-selection-outline-shadow-start, 0 0 4px $block-editor-selection-outline-shadow-end;
 
       .s-btn {
         position: absolute;
-        background-color: $snap-editor-selection-outline-s-btn-background-color;
+        background-color: $block-editor-selection-outline-s-btn-background-color;
         border: none;
         line-height: 14px;
         padding: 3px 4px;
         border-radius: 4px;
         pointer-events: all;
         cursor: pointer;
-        -webkit-box-shadow: inset 0 1px 1px $snap-editor-selection-outline-s-btn-shadow-start 0 0 4px $snap-editor-selection-outline-s-btn-shadow-end;
-        -moz-box-shadow: inset 0 1px 1px $snap-editor-selection-outline-s-btn-shadow-start, 0 0 4px $snap-editor-selection-outline-s-btn-shadow-end;
-        box-shadow: inset 0 1px 1px $snap-editor-selection-outline-s-btn-shadow-start, 0 0 4px $snap-editor-selection-outline-s-btn-shadow-end;
+        -webkit-box-shadow: inset 0 1px 1px $block-editor-selection-outline-s-btn-shadow-start 0 0 4px $block-editor-selection-outline-s-btn-shadow-end;
+        -moz-box-shadow: inset 0 1px 1px $block-editor-selection-outline-s-btn-shadow-start, 0 0 4px $block-editor-selection-outline-s-btn-shadow-end;
+        box-shadow: inset 0 1px 1px $block-editor-selection-outline-s-btn-shadow-start, 0 0 4px $block-editor-selection-outline-s-btn-shadow-end;
         background-color: #000;
         color: #fff;
 
@@ -152,13 +152,13 @@ $segment-point-bezier-control-marker-border-color: #000000;
   }
 }
 
-div.css-zoom.snap-editor-zoom {
+div.css-zoom.block-editor-zoom {
   position: absolute;
   top: 30px;
   left: 10px;
 }
 
-div.snap-editor-drag-outline {
+div.block-editor-drag-outline {
   white-space: nowrap;
 }
 
