--- a/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.scss
+++ b/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.scss
@@ -15,8 +15,8 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
     position: absolute;
     width: 1px;
     height: 1px;
-    top: 15 /*modal dialog padding*/ + $table-row-height + ($table-row-height - $commit-size)/2; //TO MATCH PERFECT POSITIONING ABOVE TABLE LAYOUT'S FIRST COLUMN
-    left: 15px;
+    top: 20 /*modal dialog padding*/ + $table-row-height + ($table-row-height - $commit-size)/2; //TO MATCH PERFECT POSITIONING ABOVE TABLE LAYOUT'S FIRST COLUMN
+    left: 30px;
 
 
     /*DISABLE OUTER BORDER WHEN FOCUSED*/
@@ -60,49 +60,52 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
   table {
     tr {
       height: $table-row-height;
-    }
 
-    th,
-    td {
-      padding: 0px;
-      padding-right: 5px;
-      line-height: 12px;
-      font-size: 12px;
-      white-space: nowrap;
-      vertical-align: middle;
+      th,
+      td {
+        padding: 0 5px 0 0;
+        white-space: nowrap;
+        vertical-align: middle;
+        text-align: center; // everything should be in center
 
-      div.commit-message {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: inline-block;
-        max-width: 600px;
-      }
+        &.actions {
+          text-align: left;
+        }
 
-      .branch-label {
-        margin-right: 2px;
+        div.commit-message {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          text-align: left;
+          //display: inline-block;
+          max-width: 600px;
+        }
 
-        [class*="icon-"] {
+        .branch-label {
+          margin-right: 2px;
+
+          [class*="icon-"] {
+            margin-left: 2px;
+          }
+
+          [class*="icon-white"]:hover {
+            cursor: pointer;
+          }
+
+          &.label {
+            font-size: 11px;
+            font-weight: normal;
+            height: 15px;
+          }
+        }
+
+        > .btn {
           margin-left: 2px;
+          margin-right: 2px;
         }
 
-        [class*="icon-white"]:hover {
-          cursor: pointer;
+        .control-group {
+          margin-bottom: 0px;
         }
-
-        &.label {
-          font-size: 11px;
-          font-weight: normal;
-          height: 15px;
-        }
-      }
-
-      > .btn {
-        margin-left: 2px;
-        margin-right: 2px;
-      }
-
-      .control-group {
-        margin-bottom: 0px;
       }
     }
 
