--- a/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.css
+++ b/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.css
@@ -1,6 +1,10 @@
 /* make sure to update commit_WIDTH and commit_HEIGHT in Widgets/ProjectRepository/ProjectRepositoryWidget.js */
 .project-repository-widget {
   /********* TABLE LAYOUT STYLES ************/ }
+  .project-repository-widget table.table.commit-list {
+    width: auto; }
+  .project-repository-widget .commit-column {
+    width: 100%; }
   .project-repository-widget .commits {
     position: absolute;
     width: 1px;
@@ -14,17 +18,17 @@
       position: absolute;
       width: 8px;
       height: 8px;
-      background-color: black;
+      background-color: #000000;
       border-radius: 5px; }
       .project-repository-widget .commits .commit.actual {
-        background-color: #ff7800;
-        -moz-box-shadow: 0 0 10px 3px #ff7800;
-        -webkit-box-shadow: 0 0 10px 3px #ff7800;
-        box-shadow: 0 0 10px 3px #ff7800; }
+        background-color: #FF7800;
+        -moz-box-shadow: 0 0 10px 3px #FF7800;
+        -webkit-box-shadow: 0 0 10px 3px #FF7800;
+        box-shadow: 0 0 10px 3px #FF7800; }
   .project-repository-widget .show-more {
     height: 36px;
     line-height: 36px;
-    background-color: #f7f7f7;
+    background-color: #F7F7F7;
     border-bottom: 1px solid #3a87ad;
     border-top: 1px solid #3a87ad;
     text-align: center;
@@ -49,6 +53,7 @@
           .project-repository-widget table tr th.actions > div.input-group > input,
           .project-repository-widget table tr td.actions > div.input-group > input {
             height: 100%;
+            width: 150px;
             padding: 3px 5px; }
       .project-repository-widget table tr th.commit-hash,
       .project-repository-widget table tr td.commit-hash {
@@ -84,3 +89,5 @@
     border-top: 1px solid transparent; }
   .project-repository-widget table.table-hover tbody tr:hover > td, .project-repository-widget table.table-hover tbody tr:hover > th {
     background-color: rgba(245, 245, 245, 0.5); }
+
+/*# sourceMappingURL=ProjectRepositoryWidget.css.map */
