--- a/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.css
+++ b/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.css
@@ -1,16 +1,19 @@
 /* make sure to update commit_WIDTH and commit_HEIGHT in Widgets/ProjectRepository/ProjectRepositoryWidget.js */
+.repository-dialog .modal-header > h3 {
+  margin-top: 0;
+  margin-bottom: 0; }
+
 .project-repository-widget {
   /********* TABLE LAYOUT STYLES ************/ }
   .project-repository-widget table.table.commit-list {
     width: auto; }
-  .project-repository-widget .commit-column {
+  .project-repository-widget .message-column {
     width: 100%; }
   .project-repository-widget .commits {
     position: absolute;
     width: 1px;
     height: 1px;
     top: 53.5px;
-    left: 30px;
     /*DISABLE OUTER BORDER WHEN FOCUSED*/ }
     .project-repository-widget .commits:focus {
       outline: none; }
@@ -18,17 +21,17 @@
       position: absolute;
       width: 8px;
       height: 8px;
-      background-color: #000000;
+      background-color: black;
       border-radius: 5px; }
       .project-repository-widget .commits .commit.actual {
-        background-color: #FF7800;
-        -moz-box-shadow: 0 0 10px 3px #FF7800;
-        -webkit-box-shadow: 0 0 10px 3px #FF7800;
-        box-shadow: 0 0 10px 3px #FF7800; }
+        background-color: #ff7800;
+        -moz-box-shadow: 0 0 10px 3px #ff7800;
+        -webkit-box-shadow: 0 0 10px 3px #ff7800;
+        box-shadow: 0 0 10px 3px #ff7800; }
   .project-repository-widget .show-more {
     height: 36px;
     line-height: 36px;
-    background-color: #F7F7F7;
+    background-color: #f7f7f7;
     border-bottom: 1px solid #3a87ad;
     border-top: 1px solid #3a87ad;
     text-align: center;
@@ -40,7 +43,7 @@
     height: 25px; }
     .project-repository-widget table tr th,
     .project-repository-widget table tr td {
-      padding: 0 5px 0 0;
+      padding: 0 5px;
       white-space: nowrap;
       vertical-align: middle;
       text-align: center; }
@@ -49,7 +52,8 @@
         text-align: left; }
         .project-repository-widget table tr th.actions > div.input-group,
         .project-repository-widget table tr td.actions > div.input-group {
-          margin-bottom: 0; }
+          margin-bottom: 0;
+          display: inline-flex; }
           .project-repository-widget table tr th.actions > div.input-group > input,
           .project-repository-widget table tr td.actions > div.input-group > input {
             height: 100%;
@@ -63,7 +67,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         text-align: left;
-        max-width: 600px; }
+        min-width: 200px; }
       .project-repository-widget table tr th .branch-label,
       .project-repository-widget table tr td .branch-label {
         margin-right: 2px; }
@@ -84,10 +88,8 @@
         margin-right: 2px; }
       .project-repository-widget table tr th .control-group,
       .project-repository-widget table tr td .control-group {
-        margin-bottom: 0px; }
+        margin-bottom: 0; }
   .project-repository-widget table td:first-child {
     border-top: 1px solid transparent; }
   .project-repository-widget table.table-hover tbody tr:hover > td, .project-repository-widget table.table-hover tbody tr:hover > th {
-    background-color: rgba(245, 245, 245, 0.5); }
-
-/*# sourceMappingURL=ProjectRepositoryWidget.css.map */
+    background-color: rgba(236, 236, 236, 0.5); }
