--- a/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.scss
+++ b/src/client/js/Widgets/ProjectRepository/styles/ProjectRepositoryWidget.scss
@@ -10,13 +10,22 @@ $show-more-panel-border: 1px solid #3a87ad;
 
 $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWidget.js Y_DELTA!!!
 
+.repository-dialog {
+  .modal-header {
+    > h3 {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+}
+
 .project-repository-widget {
 
   table.table.commit-list {
     width: auto;
   }
 
-  .commit-column {
+  .message-column {
     width: 100%;
   }
 
@@ -25,7 +34,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
     width: 1px;
     height: 1px;
     top: 20 /*modal dialog padding*/ + $table-row-height + ($table-row-height - $commit-size)/2; //TO MATCH PERFECT POSITIONING ABOVE TABLE LAYOUT'S FIRST COLUMN
-    left: 30px;
+    //left: 30px;
 
 
     /*DISABLE OUTER BORDER WHEN FOCUSED*/
@@ -49,7 +58,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
       }
     }
   }
-
+  
   .show-more {
     height: $show-more-panel-height;
     line-height: $show-more-panel-height;
@@ -72,7 +81,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
 
       th,
       td {
-        padding: 0 5px 0 0;
+        padding: 0 5px;
         white-space: nowrap;
         vertical-align: middle;
         text-align: center; // everything should be in center
@@ -82,6 +91,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
 
           > div.input-group {
             margin-bottom: 0;
+            display: inline-flex;
             > input {
               height: 100%;
               width: 150px;
@@ -99,7 +109,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
           text-overflow: ellipsis;
           text-align: left;
           //display: inline-block;
-          max-width: 600px;
+          min-width: 200px;
         }
 
 
@@ -127,7 +137,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
         }
 
         .control-group {
-          margin-bottom: 0px;
+          margin-bottom: 0;
         }
       }
     }
@@ -138,7 +148,7 @@ $table-row-height: 25px; //equals Widgets/ProjectRepository/ProjectRepositoryWid
 
     &.table-hover tbody tr:hover > td,
     &.table-hover tbody tr:hover > th {
-      background-color: rgba(245, 245, 245, 0.5);
+      background-color: rgba(236, 236, 236, 0.50);
     }
   }
 }
